# nex

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SOURCE_AUDIT_BUGS_FIXES_IMPROVEMENTS.md  bottlenecks-and-fixes.md  v2-verified-gaps.md
.antigravitycli/: 4ced7fa5-2080-4378-9755-13d3c24780d9.json
.commandcode/taste/: taste.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: hotkey-tray-no-launcher.md
.planning/debug/resolved/: hover-screentear-and-flash.md
.planning/phases/: 07-11-CONTEXT.md
.planning/phases/01-platform-glue/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02-icons/: 02-icons-SUMMARY.md
.planning/phases/04-shim-wireup/: 04-shim-wireup-SUMMARY.md
.planning/phases/06-stability/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md
.planning/phases/07-indexing-perf/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md
.planning/phases/08-search-quality/: 08-01-PLAN.md  08-02-PLAN.md
.planning/phases/09-icon-delivery/: 09-01-PLAN.md
.planning/phases/10-quick-launch/: 10-01-PLAN.md
.planning/plans/: iced-migration.md
.planning/research/: ui-framework-evaluation.md
apps/assets/: convert-ico.cjs  convert-ico.mjs
apps/assets/backup/: nex.ico.live  nex.ico.old
apps/core/: Cargo.toml  build.rs
apps/core/assets/: app.js  index.html  style.css
apps/core/examples/: gen_icon.rs
apps/core/src/: action_executor.rs  action_registry.rs  calculator.rs  clipboard_history.rs  config.rs  console_signal.rs  core_service.rs  discovery.rs  everything.rs  everything_bridge.rs  file_watcher.rs  file_watcher_consumer.rs  fts5_search.rs  index_store.rs  lib.rs  main.rs  model.rs  runtime.rs  runtime_actions.rs  runtime_commands.rs  runtime_diagnostics.rs  runtime_hotkey.rs  runtime_index.rs  runtime_loop.rs  runtime_overlay_rows.rs  runtime_process.rs  runtime_search_session.rs  search.rs  search_worker.rs  settings.rs  tantivy_search.rs  transport.rs  uninstall_registry.rs  updater.rs  windows_overlay.rs
apps/core/src/overlay/: boot.rs  geometry.rs  host.rs  hotkey.rs  icons.rs  indexing_progress.rs  mod.rs  model.rs  platform.rs  shim.rs  theme.rs  tray.rs  view.rs
apps/core/src/windows_overlay/: animation.rs  custom_icons.rs  d2d_renderer.rs  gdiplus_rendering.rs  icon_cache.rs  icon_loader.rs  indexing_progress.rs  input.rs  layout.rs  mod.rs  painting.rs  skia_renderer.rs  state.rs  tray.rs  types.rs  window.rs
apps/core/tests/: action_executor_test.rs  config_test.rs  contract_test.rs  core_service_test.rs  discovery_test.rs  hotkey_runtime_test.rs  index_store_test.rs  search_test.rs  settings_test.rs  transport_test.rs  windows_runtime_smoke_test.rs
docs/: README.md  tantivy-migration-plan.md  v2-verified-gaps.md
docs/architecture/: configuration-spec.md  overview.md  system-architecture.md
docs/configuration/: configuration.md
docs/engineering/: risk-register.md  spotlight-feature-reference.md  spotlight-parity-architecture.md  windows-operator-runbook.md  windows-packaging-readiness.md  windows-runtime-behavior.md  windows-runtime-validation-checklist.md  windows-security-release-checklist.md
docs/guides/: development.md  getting-started.md
docs/plans/: 2026-03-02-swiftfind-memory-config-icon-plan.md  2026-03-31-nex-freshness-without-watchers.md  2026-03-31-nex-hotkey-conflict-recovery.md  2026-03-31-nex-memory-envelope-tightening.md  2026-03-31-nex-on-demand-updater-ux.md  2026-05-30-ui-ux-improvements.md  audit-and-roadmap.md  everything-first-migration.md  indexing-comparison.md  overlay-refactor-plan.md  robustness-audit.md
docs/product/: project-charter.md  requirements.md
docs/releases/: RELEASE-TEMPLATE.md  v1.0.0-notes.md  v1.1.0-notes.md  v1.1.1-notes.md  v1.3.0-notes.md  v2.1.0-notes.md  v2.1.1-notes.md  v2.2.0-notes.md  v2.2.1-notes.md  v2.2.2-notes.md  v2.3.0-notes.md  v2.3.1-notes.md  v2.4.0-notes.md  v2.4.1-notes.md  v2.4.2-notes.md  v2.4.3-notes.md  v2.5.0-notes.md  v2.6.0-notes.md  v2.7.0-notes.md  v2.8.0-notes.md  v6.4.1-notes.md  windows-milestone-release-notes-template.md
docs/testing/: testing.md
manifests/h/Haxllo/Nex/1.0.0/: Haxllo.Nex.installer.yaml  Haxllo.Nex.locale.en-US.yaml  Haxllo.Nex.yaml
manifests/h/Haxllo/Nex/1.0.1/: Haxllo.Nex.installer.yaml  Haxllo.Nex.locale.en-US.yaml  Haxllo.Nex.yaml
scripts/windows/: install-nex.ps1  install-swiftfind.ps1  nex.iss  package-windows-artifact.ps1  package-windows-installer.ps1  profile-memory-and-icons.ps1  swiftfind.iss  uninstall-swiftfind.ps1  update-nex.ps1
tests/smoke/: scaffold.test.ts
tools/: check-keys.sh
winget-pkgs/manifests/n/nex-cli/1.0.0/: nex-cli.yaml
winget-pkgs/manifests/n/nex-cli/6.4.1/: nex-cli.locale.en-US.yaml  nex-cli.yaml
