[package]
name = "nex-cli"
version = "1.3.0"
edition = "2021"
description = "A keyboard-first launcher for Windows"
license = "MIT"
repository = "https://github.com/haxllo/nex"
homepage = "https://github.com/haxllo/nex"
readme = "../../README.md"
build = "build.rs"

[lib]
name = "nex_core"
path = "src/lib.rs"

[[bin]]
name = "nex"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
json5 = "0.4.1"
toml = "0.8.19"
walkdir = "2.5.0"
libloading = "0.8.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = [
  "Foundation_Numerics",
  "Win32_Foundation",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_UI_WindowsAndMessaging",
] }
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Environment",
  "Win32_System_LibraryLoader",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Ole",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winres = "0.1"
