[package]
name = "nex"
version = "2.4.1"
edition = "2021"
authors = ["haxllo"]
description = "A keyboard-first launcher for Windows"
license = "MIT"
repository = "https://github.com/haxllo/nex"
homepage = "https://github.com/haxllo/nex"
readme = "../../README.md"
build = "build.rs"

[lib]
name = "nex_core"
path = "src/lib.rs"

[[bin]]
name = "nex"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled", "vtab"] }
tantivy = { version = "0.26.1", default-features = false, features = ["mmap"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
json5 = "0.4.1"
toml = "0.8.19"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
webview2-com-sys = "0.38.2"
windows-core = "0.61"
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Security_Cryptography",
  "Win32_System_Environment",
  "Win32_System_LibraryLoader",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_Ole",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
once_cell = "1.20"
crossbeam-channel = "0.5"
lru = "0.12"
wry = { version = "0.55.1", default-features = false, features = ["os-webview", "protocol"] }
tao = "0.35.3"
window-vibrancy = "0.7.1"

[dev-dependencies]
tempfile = "3.12.0"

[build-dependencies]
winres = "0.1"
